# mpMap

./: .gitignore  .travis.yml  DESCRIPTION  DESCRIPTION~  NAMESPACE  NEWS  README  TODO  configure  configure.ac  make
R/: .mpIM.R.swp  CR-calcLD.R  CR-calcLD.R~  add3pt.R  add3pt.R~  calc.genoprob2.R  calcmpprob.R  calcmpprob.R~  check-QTL.R  clean.mpcross.R  cleanmap.R  combine-chr.R  combine-ibd.R  compare-orders.R  computemap.R  convertHappy2Mpcross.R  convertped.R  convertped.R~  fillmiss.R  findqtl.R  findqtl2.R  fit.mpqtl.R  gen2ped.R  gen4ped.R  gen8ped.R  generate-error.R  generate-error2.R  generate-obs.R  generate-pheno.R  getAllFunnels.R  getpval.R  identifyDesign.R  mapcomp.R  mp-mapdist.R  mpIM.R  mpIMlm.R  mpMap-output.R  mpMap2gs.R  mpMap2gs.R~  mpadd.R  (+44 more)
inst/: CITATION
inst/include/: CastToRaw32Bit.h  allowableMarkerPatterns.h  arrayDeleter.h  findIDInPedigree.h  generateDesignMatrix.h  getAllFunnels.h  getFunnelCPU.h  getFunnelGPU.h  impute.h  intercrossingGenerations.h  markerPatternsToUniqueValues.h  mpMap.h  orderFunnels.h  recodeFoundersAndFinals.h  rfhaps.h  rfhapsSpecificDesign.h  rfhaps_common.h  rfhaps_cpu.h  rfhaps_gpu.h  validateMPCross.h
man/: add3pt.Rd  clean.mpcross.Rd  cleanmap.Rd  compare_orders.Rd  computemap.Rd  fillmiss.Rd  findqtl.Rd  findqtl2.Rd  fit.Rd  get.binmarkers.Rd  identifyDesign.Rd  mapcomp-all.Rd  maporder.Rd  mp-mapdist.Rd  mpIM.Rd  mpIMlm.Rd  mpMap-internal.Rd  mpMap-output.Rd  mpMap-package.Rd  mpMap-package.Rd~  mpMap2gs.Rd  mpadd.Rd  mpbin.Rd  mpbinexplore.Rd  mpbinhap.Rd  mpbinimpute.Rd  mpbinrf.Rd  mpcalcld.Rd  mpchrrf.Rd  mpclean.Rd  mpcollapse.Rd  mpcombine.Rd  mpcross.Rd  mpestrf.Rd  mpexpand.Rd  mpgroup.Rd  mpheat.Rd  mpimpute.Rd  mpimputerf.Rd  mporder.Rd  (+24 more)
src/: .gitignore  CastToRaw32Bit.cpp  Makefile.in  Makevars  Makevars.win  Unique.hpp  add3pt.c  allowableMarkerPatterns.cpp  calcLD.c  findIDInPedigree.cpp  founderprob.c  getAllFunnels.cpp  getFunnel.cpp  impute.cpp  intercrossingGenerations.cpp  linesCUDA.txt  markerPatternsToUniqueValues.cpp  recodeFoundersAndFinals.cpp  register.cpp  rfhaps.cpp  rfhapsSpecificDesign.cpp  rfhaps_cpu.cpp  rfhaps_gpu.cu  sharedArray.hpp  tmp.founder.csv  tmp.ril.csv  validateMPCross.cpp
src-i386/: Makevars.win  Unique.hpp  allowableMarkerPatterns.cpp  generateDesignMatrix.cpp  generateGenotypes.cpp  generateGenotypes.h  getFunnel.cpp  impute.cpp  linesC.txt  qsort.c  rfhaps_gpu.cu  rngs.c  validateMPCross.cpp
src-x64/: Makefile.in  founderprob.c  getAllFunnels.cpp  linesCpp.txt  orderFunnels.cpp  rfhaps.cpp  rfhaps_cpu.cpp  sim.c
